<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Home_Page"
    android:background="#111111" >
    
     <TextView
        android:id="@+id/Clg_Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:shadowColor="@android:color/darker_gray"
        android:shadowRadius="2"
        android:text="@string/clg_name"
        android:textColor="#ffffff"
        android:textSize="50sp" />
     
     <ImageButton
         android:id="@+id/boys_img"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:contentDescription="@string/hostel_type1"
         android:src="@drawable/boys" />

      <ImageButton
          android:id="@+id/girls_img"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignLeft="@+id/boys_img"
          android:layout_below="@+id/boys_img"
          android:layout_marginTop="17dp"
          android:contentDescription="@string/hostel_type2"
          android:src="@drawable/girls" />

</RelativeLayout>
