<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#111111"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Hostels" >

    <TextView
        android:id="@+id/select_text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/select_your_hostel"
         android:textStyle="italic"
        android:textColor="#ffffff"
        android:textSize="30sp" />

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/select_text1"
        android:layout_centerVertical="true" >

        <RadioButton
            android:id="@+id/radio0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/block1"
            android:gravity="center"
     android:textColor="#99C68E"
      android:textStyle="bold"
        android:textSize="30sp" />

        <RadioButton
            android:id="@+id/radio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
            android:text="@string/block2"
            android:gravity="center"
      android:textColor="#99C68E"
        android:textSize="30sp"
        android:textStyle="bold"
         />

        
    </RadioGroup>

</RelativeLayout>